# pico-c-rust-interop

./: .gitignore  CMakeLists.txt  main.c
rust/: Cargo.toml  bindings.h
rust/src/: lib.rs
